[tool.poetry]
name = "social-auto-posting"
version = "0.1.0"
description = ""
authors = ["deska13"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
litestar = "^2.12.1"
uvicorn = "^0.31.0"
sqlalchemy = "^2.0.35"
asyncpg = "^0.29.0"
msgpack = "^1.1.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
alembic = "^1.13.2"
aiohttp = "^3.10.5"
beautifulsoup4 = "^4.12.3"
faststream = "^0.5.23"
dishka = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"
flake8 = "^6.0.0"
isort = "^5.12.0"
black = {extras = ["jupyter"], version = "^23.3.0"}
pylint = "^2.17.4"
mypy = "^1.3.0"
types-beautifulsoup4 = "^4.12.0.20240907"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = ["tests"]
plugins = ["pydantic.mypy"]

[tool.isort]
profile = "black"
known_first_party = ["src"]
skip = []

[tool.black]
line-length = 88
target-version = ['py312']
exclude = '''
/(
\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
| docker
| config
| temp
)/
'''